# LawMind

./: .gitignore  API文档.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/api/: auth_routes.py  routes.py
app/core/: auth.py  config.py  logging.py  rate_limit.py
app/db/: backend.py  cache.py  memory.py  models.py  mysql_client.py  queue.py
app/rag/: document_loader.py  embedding.py  generator.py  reranker.py  retriever.py  vector_store.py
data/: feedback.jsonl
data/cache/: cache.db  cache.db-shm  cache.db-wal
data/docs/: 民法典节选.txt
data/eval/: eval_results.json  legal_eval_dataset.json
scripts/: download_dataset.py  download_model.py  eval_ragas.py  ingest.py  ingest_auto.py  ingest_cases.py  ingest_laws.py  ingest_safe.py  init_db.py  search_test.py  verify_phase3.py  worker.py
tests/: run_tests.py
tests/functional/: test_api.py  test_hybrid_search.py  test_performance.py  test_reranker.py  test_streamlit.py  test_vector_search.py
tests/unit/: test_auth.py  test_config.py  test_document_loader.py  test_generator.py  test_memory.py  test_retriever.py  test_vector_store.py
文档/: 1.md  2.md  3.md  README.md  phase10-完善与优化.md  phase4-对话记忆与缓存.md  phase5-前端与评估.md  phase6-高级功能.md  phase8-检索优化.md  phase9-安全与异步.md  开发指南.md  提示词.txt  数据格式与分片问答.md  架构对比.md  法律RAG系统.md  进度.md  部署指南.md  问题记录.md  项目介绍.md
文档/architecture/: README.md  智能客服RAG.md
文档/guides/: README.md  功能测试指南.md  开发指南.md  测试报告.md  进度.md
文档/issues/: 2026-07-12_ChromaDB索引损坏与数据完整性问题.md  (+3 more)
(+13 files in other folders)
