[project]
name = "legal-rag"
version = "0.1.0"
description = "法律领域RAG系统 — 支持法条检索、案例分析、法律咨询的智能检索增强生成系统"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=0.6.0",
    "fastapi==0.115.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.15",
    "langchain-deepseek>=0.1.3",
    "langchain-text-splitters>=0.3.7",
    "pypdf2==3.0.1",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "redis>=5.1.1",
    "sentence-transformers>=3.1.1",
    "unstructured>=0.16.0",
    "uvicorn[standard]==0.30.6",
    "openai>=1.51.0",
    "torch>=2.11.0",
    "jieba>=0.42.1",
    "streamlit>=1.56.0",
    "diskcache>=5.6.3",
    "prometheus-client>=0.25.0",
    "structlog>=25.5.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.2.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
